<resources>
    <string name="app_name">TakeMeHomeApp</string>
    <string name="applink"><a href="https://play.google.com/store/apps/details?id=com.themarkwebs.govcard"></a></string>
    <string name="title_activity_maps">Map</string>
    <string name="twitterUsername" />
    <string name="app_logo">app logo</string>
    <string name="our_mission_is_to_give_people_the_power_to_help_the_ones_in_need_by_bringing_them_this_help_within_hand_reach">Our mission is to give people the power to help the ones in need by bringing them this help within hand reach.</string>
    <string name="for_now_we_are_only_on_the_region_of_denmark_but_with_everyone_s_support_and_will_to_help_we_aim_to_be_worldwide_used">For now we are only on the region of Denmark but, with everyone\'s support and will to help, we aim to be worldwide used.</string>
    <string name="we_have_developed_this_application_in_order_to_build_a_united_society_and_together_we_can_colaborate_to_protect_the_ones_in_need_join_us_by_signing_up_and_you_will_be_part_of_this_great_change">We have developed this application in order to build a united society, and together we can colaborate to protect the ones in need. Join us by signing up and you will be part of this great change.</string>
    <string name="even_police_and_doctors_have_their_own_accounts_with_privileged_features">Even police and doctors have their own accounts with privileged features!</string>
    <string name="profile_picture">profile picture</string>
    <string name="list_of_medicines">List of medicines</string>
    <string name="list_of_phone_numbers">List of phone numbers</string>
    <string name="personal_information">PERSONAL INFORMATION</string>
    <string name="list_of_diseases">List of diseases</string>
    <string name="list_of_allergies">List of allergies</string>
    <string name="address">Address</string>
    <string name="list_of_phones">List of phones</string>
    <string name="e_mail">E-mail</string>
    <string name="list_of_medication">List of medication</string>
    <string name="scanning">Scanning...</string>
    <string name="go">Go</string>
    <string name="peter_parker">PETER PARKER</string>
    <string name="additional_info">Additional info</string>
    <string name="or_send_my_location_via">or send my location via</string>
    <string name="see_current_location">See current location</string>
    <string name="please_if_you_found_me_call">Please, if you found me call</string>
    <string name="sms">sms</string>
    <string name="icon_phone">icon phone</string>
    <string name="icon_sms">icon sms</string>
    <string name="icon_email">icon email</string>
    <string name="icon_map">icon map</string>
    <string name="log_in">LOG IN</string>
    <string name="incorrect_username_or_password">Incorrect username or password.</string>
    <string name="submit">submit</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up.</string>
    <string name="complete_name">Complete name</string>
    <string name="police_station">Police station</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="cpr">cpr</string>
</resources>