<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activities.InfoActivity">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grad_login">

        <RelativeLayout
            android:id="@+id/profilePicture_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <ImageButton
                android:id="@+id/imageButton_profilePicture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:adjustViewBounds="true"
                android:background="@drawable/grad_login"
                android:contentDescription="@string/profile_picture"
                android:padding="3dp"
                android:scaleType="centerInside"
                android:src="@drawable/mockpicture" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView_fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profilePicture_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15sp"
            android:fontFamily="@font/allerta"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:text="Peter Parker" />

        <TextView
            android:id="@+id/textView_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_fullName"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:paddingBottom="10dp"
            android:textAllCaps="true"
            android:textColor="@color/purple_200"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="POLICE" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relative_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView_identityNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textSize="18sp"
                    tools:text="ABC1234" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/gradEnd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complete_name"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView_completeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textSize="18sp"
                    tools:text="Peter Parker" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/gradEnd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cpr"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView_cpr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textSize="18sp"
                    tools:text="012345679876" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/gradEnd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_station"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/police_station"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView_station"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textSize="18sp"
                    tools:text="Esbjerg" />

                <View
                    android:id="@+id/line_station"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/gradEnd" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>